フォルダ構成の変更

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend_temprate",
+  "name": "frontend_temprate_heroku",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
